# autoware_auto_mirror

./: .aderc  .aderc-amd64-foxy  .aderc-amd64-foxy-lgsvl  .aderc-arm64-foxy  .aderc-arm64-galactic-vesc  .aderc-lgsvl  .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .lfsconfig  .readthedocs.yaml  Dockerfile  README.md  TODO  autoware.auto.foxy.repos  autoware.auto.galactic.repos  core  dev.sh  get_scenario_simulator_v2.sh  lgsvl-sensors.json  polygon-intersection.md  scenario.simulator.v2.repos
.git-hooks/: pre-commit
lanelet2_projection/: CMakeLists.txt
src/common/autoware_auto_contracts/: CMakeLists.txt  package.xml
src/common/autoware_auto_contracts/design/: autoware_auto_contracts-design.md
src/common/autoware_auto_contracts/include/autoware_auto_contracts/: acute_degree.hpp  acute_radian.hpp  assertions.hpp  checks.hpp  nonnegative_real.hpp  real.hpp  scalar_flicker.hpp  size_bound.hpp  strictly_eps_positive_real.hpp  strictly_positive_real.hpp  violation_handler.hpp
src/common/autoware_auto_contracts/test/: gtest_main.cpp  test_acute_degree.cpp  test_acute_radian.cpp  test_assertions.cpp  test_dimensional_analysis.cpp  test_nonnegative_real.cpp  test_real.cpp  test_scalar_flicker.cpp  test_size_bound.cpp  test_strictly_eps_positive_real.cpp  test_strictly_positive_real.cpp
src/control/latlon_muxer/: CMakeLists.txt  package.xml
src/control/latlon_muxer/design/: latlon_muxer_design.md
src/control/latlon_muxer/include/latlon_muxer/: node.hpp  visibility_control.hpp
src/control/latlon_muxer/src/: node.cpp
src/control/latlon_muxer/test/: test_latlon_muxer_node.cpp  test_latlon_muxer_node_launch.py
src/drivers/lslidar_driver/: CMakeLists.txt  package.xml
src/drivers/lslidar_driver/design/: lslidar-driver-design.md
src/drivers/lslidar_driver/include/lslidar_driver/: ch128_data.hpp  ch64w_data.hpp  common.hpp  ls16_data.hpp  ls32_data.hpp  lslidar_translator.hpp  visibility_control.hpp
src/drivers/lslidar_driver/src/: ch128_data.cpp  ch64w_data.cpp  ls16_data.cpp  ls32_data.cpp  lslidar_translator.cpp
src/drivers/lslidar_nodes/: CMakeLists.txt  package.xml
src/drivers/lslidar_nodes/design/: lslidar_nodes-design.md
src/drivers/lslidar_nodes/include/lslidar_nodes/: lslidar_cloud_node.hpp  visibility_control.hpp
src/drivers/lslidar_nodes/launch/: ch128_driver.launch.py  ch64w_driver.launch.py  ls16_driver.launch.py  ls32_driver.launch.py
src/drivers/lslidar_nodes/param/: ch128_test.param.yaml  ch64w_test.param.yaml  ls16_test.param.yaml  ls32_test.param.yaml
src/drivers/lslidar_nodes/src/: lslidar_cloud_node.cpp  lslidar_cloud_node_main.cpp
src/motion/control/controller_testing/: CMakeLists.txt  package.xml
src/motion/control/controller_testing/controller_testing/: controller_testing_node.py
src/motion/control/controller_testing/launch/: controller_testing_node.launch.py  controller_testing_node_mpc.launch.py  controller_testing_node_pure_pursuit.launch.py
src/perception/filters/filter_node_base/: CMakeLists.txt  package.xml
src/perception/filters/outlier_filter_nodes/: CMakeLists.txt  package.xml
src/perception/lidar_centerpoint/: CMakeLists.txt  README.md  package.xml
src/perception/lidar_centerpoint/launch/: lidar_centerpoint.launch.xml
src/perception/lidar_centerpoint/src/: main.cpp  node.cpp
src/prediction/rule_based/prediction_nodes/: CMakeLists.txt  package.xml
src/prediction/tracking_test_framework/: CMakeLists.txt  package.xml
src/prediction/tracking_test_framework/design/: tracking_test_framework-design.md
src/prediction/tracking_test_framework/launch/: tracking_test_framework.launch.py
src/prediction/tracking_test_framework/src/: tracking_test_framework.cpp  tracking_test_framework_node.cpp
src/prediction/tracking_test_framework/test/: test_tracking_test_framework.cpp
src/system/autoware_state_monitor/: CMakeLists.txt  README.md  package.xml
src/system/autoware_state_monitor/config/: autoware_state_monitor.param.yaml
src/system/autoware_state_monitor/design/: autoware_state_monitor-design.md
src/system/autoware_state_monitor/launch/: autoware_state_monitor.launch.py  autoware_state_monitor.launch.xml
src/system/autoware_state_monitor/test/: autoware_state_monitor_node_launch.test.py  autoware_state_monitor_node_test.cpp  autoware_state_test.cpp  odometry_updater_test.cpp  state_machine_test.cpp  state_test.cpp  test_utils.hpp
src/tools/autoware_auto_create_pkg/: CMakeLists.txt  package.xml  setup.py
src/tools/autoware_auto_create_pkg/autoware_auto_create_pkg/: main.py
src/tools/autoware_auto_create_pkg/design/: autoware_auto_create_pkg-design.md
src/tools/autoware_auto_moriyama/: CMakeLists.txt  package.xml
src/tools/benchmark_tool/: CMakeLists.txt  package.xml
src/tools/benchmark_tool_nodes/: CMakeLists.txt  package.xml
src/tools/benchmark_tool_nodes/design/: benchmark-tool-nodes-design.md  benchmark-tool-nodes-lidar-localization.md  benchmark-tool-nodes-readme.md
src/tools/benchmark_tool_nodes/launch/: apollo_lidar_segmentation_node_benchmark.launch.py  benchmark_task.launch.py  euclidean_cluster_node_benchmark.launch.py  lidar_localization_benchmark.launch.py  ray_ground_classifier_benchmark.launch.py
src/tools/odom_to_state_conversion_nodes/: CMakeLists.txt  package.xml
src/tools/odom_to_state_conversion_nodes/design/: odom_to_state_conversion_nodes-design.md
src/tools/odom_to_state_conversion_nodes/launch/: odom_to_state_conversion_nodes.launch.py
src/tools/odom_to_state_conversion_nodes/param/: odom_to_state_conversion.param.yaml
src/tools/odom_to_state_conversion_nodes/src/: odom_to_state_conversion_nodes.cpp
src/tools/odom_to_state_conversion_nodes/test/: test_odom_to_state_conversion_nodes.cpp
src/tools/rosbag2_moriyama_converter/: CMakeLists.txt  README.md  dataset_converter.cpp  package.xml
src/tools/rosbag2_moriyama_converter/src/: dataset_converter.cpp
src/tools/rosbag2_naming_tool/: CMakeLists.txt  package.xml
src/tools/rosbag2_naming_tool/param/: rosbag2_naming_tool.param.yaml
src/tools/rosbag2_naming_tool/src/: rosbag2_naming_tool.cpp
(+1535 files in other folders)
