<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>autoware_auto_moriyama</name>
    <version>0.0.1</version>
    <description>A package containing the Moriyama dataset for Autoware.Auto.</description>
    <maintainer email="opensource@apex.ai">Apex.AI, Inc.</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>autoware_auto_cmake</buildtool_depend>

    <!-- Building process will not be performed.-->
    <!-- This package is used for only launching.-->

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
