<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_to_state_conversion_nodes</name>
  <version>1.0.0</version>
  <description>Convert odometry sources to Vehicle Kinematic State</description>
  <maintainer email="haoru.xue@autoware.org">Haoru Xue</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_auto_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>autoware_auto_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autoware_auto_common</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
